# purport

./: .gitignore  Cargo.toml  README.md  file.txt  log.txt
src/: main.rs
src/backend/: buffer.rs  cursor.rs  dyn_load.rs  editor.rs  highlight.rs  language.rs  mod.rs  pane.rs  prompt.rs  tree_highlighter.rs
src/backend/syntax/tree_sitter/: highlighter.rs  language.rs  loader.rs  mod.rs
src/frontend/: mod.rs  ui.rs  unix_term.rs
