[package]
name = "purport"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-segmentation = "1.8.0"
toml = "0.5.8"
tree-sitter = "0.20.2"
libloading = "0.7.2"
once_cell = "1.9.0"
anyhow = "1.0.52"
